--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 BASE_URL=https://demo.nopcommerce.com
 browser=chrome
 chromedriver-path=c:/drivers/chromedriver.exe
+geckodriver-path=c:/drivers/geckodriver.exe
 default-wait=20
