--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 group 'com.github.amado-saladino'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+def allureVersion = "2.13.6"
 
 repositories {
     mavenCentral()
@@ -19,8 +21,25 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20200518'
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.6'
+    testImplementation("io.qameta.allure:allure-java-commons:$allureVersion")
+}
+
+allure {
+    autoconfigure = true
+    aspectjweaver = true
+    version = allureVersion
+
+    clean = true
+
+    useTestNG {
+        version = allureVersion
+    }
 }
 
 test {
-    useTestNG()
+    useTestNG() {
+        useDefaultListeners = true
+        suites 'testng.xml'
+    }
 }
