--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    testCompile
+}
+
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     testImplementation 'org.testng:testng:7.3.0'
