--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.6'
     testImplementation("io.qameta.allure:allure-java-commons:$allureVersion")
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.3'
 }
 
 allure {
