--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,18 @@ configurations {
 }
 
 dependencies {
-    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
-    testImplementation 'org.testng:testng:7.3.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
+    testImplementation 'org.testng:testng:7.4.0'
     implementation group: 'io.codearte.jfairy', name: 'jfairy', version: '0.5.9'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
     implementation group: 'org.json', name: 'json', version: '20200518'
-    implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.6'
     testImplementation("io.qameta.allure:allure-java-commons:$allureVersion")
-    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.3'
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
+    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'
 }
 
 allure {
