gradle not gradlew

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
         cache: gradle
         
     - name: test with gradle
-      run: ./gradlew clean test
+      run: gradle clean test
         
     - name: Test Report
       if: always()
