--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,12 @@ jobs:
         distribution: 'adopt'
         cache: gradle
         
+    - name: test workspace
+      run: echo ${{ github.workspace }}
+      
+    - name: call json server
+      run: curl localhost:81/users
+        
     - name: test with gradle
       run: gradle clean test
         
@@ -37,11 +43,12 @@ jobs:
         
     - name: JUnit Report
       uses: dorny/test-reporter@v1
-      if: success() || failure()
+      if: always()
       with:
         name: JUnit Test Report
         path: build/test-results/test/TEST-*.xml
         reporter: java-junit
+        fail-on-error: 'false'
         
     - name: HTML Test Report
       if: always()
