--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,11 +11,20 @@ jobs:
   build:
     name: UI and API Tests
     runs-on: ubuntu-latest
+#     services:
+#       json:
+#         image: ghcr.io/amado-saladino/json-server:v1
+#         ports:
+#         - 81:80
+#         env:
+#           var: val
 
     steps:
     - uses: actions/checkout@v2
     - name: start json container
-      run: docker run -d --rm -p 81:80 -v ${{ github.workspace }}/json-server:/data ghcr.io/amado-saladino/json-server:v1
+      run: >-
+        docker run -d --rm -p 81:80  -e "DB=users.json" 
+        -v ${{ github.workspace }}/json-server:/data ghcr.io/amado-saladino/json-server:v1
       
     - name: Set up JDK 11
       uses: actions/setup-java@v2
