--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: login to container registry
+      run: docker login -u ${{ github.actor }} -P ${{ secrets.GITHUB_TOKEN }}
     - name: start json container
       run: >-
         docker run -d --rm -p 81:80  -e "DB=users.json" 
