--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ### Gradle ###
 .gradle
 build/
+allure-results/
+allure-report/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
