--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.8.1'
 }
 
 group 'com.github.amado-saladino'
@@ -26,21 +25,10 @@ dependencies {
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.6'
-    testImplementation("io.qameta.allure:allure-java-commons:$allureVersion")
+    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.17.2'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'
-}
-
-allure {
-    autoconfigure = true
-    aspectjweaver = true
-    clean = true
-    version = allureVersion
-
-    useTestNG {
-        version = '2.0-BETA12'
-    }
 }
 
 test {
