--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,10 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
     
     - name: login to container registry
       run: docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
@@ -66,40 +62,12 @@ jobs:
         name: test-report
         path: "build/reports/tests/test/*"
 
-#     - name: Allure report files
-#       if: always()
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: allure-report
-#         path: "allure-results"
-
-    - name: Generate Allure Report
-      uses: simple-elf/allure-report-action@master
+    - name: Allure report files
       if: always()
-      id: allure-report
+      uses: actions/upload-artifact@v2
       with:
-        allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
-        
-    - name: Deploy allure report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
-        
-    - name: Post the link to the report
-      if: always()
-      uses: Sibz/github-status-action@v1
-      with: 
-          authToken: ${{secrets.GITHUB_TOKEN}}
-          context: 'Allure report'
-          state: 'success'
-          sha: ${{ github.event.pull_request.head.sha }}
-          target_url: amado-saladino.github.io/github-allure-history/${{ github.run_number }}
+        name: allure-report
+        path: "allure-results"
 
     - name: Upload Screenshots
       if: always()
