--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -79,6 +79,7 @@ jobs:
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
+        keep_reports: 5
         
     - name: Deploy report to Github Pages
       if: always()
