--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -97,7 +97,7 @@ jobs:
           context: 'Test allure report'
           state: 'success'
           sha: ${{ github.event.pull_request.head.sha }}
-          target_url: amado-saladino.github.io/supernova
+          target_url: https://amado-saladino.github.io/supernova
 
     - name: Upload Screenshots
       if: always()
