--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      if: always()
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     
     - name: login to container registry
       run: docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
@@ -70,16 +78,21 @@ jobs:
         name: allure-report
         path: "allure-results"
         
+    - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+        
     - name: Allure report
       uses: simple-elf/allure-report-action@master
       if: always()
       id: allure-report
       with:
         allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
         allure_history: allure-history
-        keep_reports: 5
         
     - name: Deploy report to Github Pages
       if: always()
