--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -103,6 +103,7 @@ jobs:
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: screenshots
         destination_dir: extent
+        keep_files: true
         
     - name: Upload Screenshots
       if: always()
