--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 BASE_URL=https://demo.nopcommerce.com
-REST-JSON=localhost
+REST-JSON=http://localhost:8000
+reqres-api=https://reqres.in
 browser=chrome
 headless=true
